# libzynthbox

./: .gitignore  CMakeLists.txt  README.md  install.sh
cmake/: PySide2Helper.cmake  Shiboken2Helper.cmake
lib/: JUCEHeaders.h  libzl.cpp  libzl.h
pyside_bindings/: CMakeLists.txt  __init__.py  bindings.h  bindings.xml
src/: AdjectiveNoun.cpp  AdjectiveNoun.h  AppImageHelper.cpp  AppImageHelper.h  AudioFileConverter.cpp  AudioFileConverter.h  AudioLevels.cpp  AudioLevels.h  AudioLevelsChannel.cpp  AudioLevelsChannel.h  AudioTagHelper.cpp  AudioTagHelper.h  CMakeLists.txt  CUIAHelper.cpp  CUIAHelper.h  Chords.cpp  Chords.h  ClipAudioSource.cpp  ClipAudioSource.h  ClipAudioSourceNotesModel.cpp  ClipAudioSourceNotesModel.h  ClipAudioSourcePositionsModel.cpp  ClipAudioSourcePositionsModel.h  ClipAudioSourcePositionsModelEntry.cpp  ClipAudioSourcePositionsModelEntry.h  ClipAudioSourceSliceSettings.cpp  ClipAudioSourceSliceSettings.h  ClipAudioSourceSubvoiceSettings.cpp  ClipAudioSourceSubvoiceSettings.h  ClipCommand.h  Compressor.h  DeviceMessageTranslations.h  DiskWriter.cpp  DiskWriter.h  FifoHandler.cpp  FifoHandler.h  GainHandler.cpp  GainHandler.h  Helper.cpp  Helper.h  (+105 more)
src/folderlistmodel/: README.md  fileinfothread_p.h  qquickfolderlistmodel.cpp  qquickfolderlistmodel.h
