cmake_minimum_required(VERSION 3.15)
project(libzynthbox VERSION 0.1.0)
if (POLICY CMP0063)
    cmake_policy(SET CMP0063 NEW)
endif()

find_package(ECM ${KF5_MIN_VERSION} REQUIRED CONFIG)
find_package(Qt5 ${QT_MIN_VERSION} REQUIRED CONFIG COMPONENTS Core Gui Quick Qml)
find_package(KF5Pty)
find_package(KF5Kirigami2 2.7.0)
find_package(OpenMP)
find_package(libappimage)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(QT_MIN_VERSION "5.11.0")
set(KF5_MIN_VERSION "5.54.0")
set(ENV{PKG_CONFIG_PATH} "/usr/lib/pkgconfig:/usr/local/lib/pkgconfig")
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${ECM_MODULE_PATH} ${CMAKE_CURRENT_LIST_DIR}/cmake)

option(GENERATE_PYTHON_BINDINGS "When on, the python module for libZynthbox will be generated (which requires Shiboken2 to be installed)" ON)
option(PRINT_DEBUG_LOGS "When on, a bunch of debug logs will get printed. Default : Off" OFF)

include(FindPkgConfig)
include(KDEInstallDirs)
include(ECMInstallIcons)
if(GENERATE_PYTHON_BINDINGS)
    include(PySide2Helper)
    include(Shiboken2Helper)
endif(GENERATE_PYTHON_BINDINGS)

pkg_check_modules(Jack REQUIRED jack)
pkg_check_modules(TagLib REQUIRED taglib)

include_directories(tracktion_engine/modules/)
add_subdirectory(tracktion_engine/modules/juce)
add_subdirectory(tracktion_engine/modules)

add_subdirectory(src)

if(GENERATE_PYTHON_BINDINGS)
    add_subdirectory(pyside_bindings)
endif(GENERATE_PYTHON_BINDINGS)
